<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profile_page"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <!-- TODO: Update blank fragment layout -->

    <ImageView
        android:id="@+id/profile_photo"
        android:layout_width="410dp"
        android:layout_height="350dp"
        android:contentDescription="@string/profile_photo"
        android:src="@drawable/jjj" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/profile_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center">

        <TextView
            android:id="@+id/name_box"
            style="@style/AppTheme"
            android:layout_width="182dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="300dp"
            android:layout_marginBottom="16dp"
            android:background="#008577"
            android:text="@string/name_box"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/aboutme_box"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.893" />

        <TextView
            android:id="@+id/nickname_box"
            android:layout_width="179dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="300dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="#008577"
            android:fontFamily="sans-serif-medium"
            android:text="@string/nickname_box"
            android:textAlignment="center"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/aboutme_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/name_box"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.893" />

        <TextView
            android:id="@+id/name_content"
            android:layout_width="176dp"
            android:layout_height="32dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/name_content"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/aboutme_box"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/name_box" />

        <TextView
            android:id="@+id/nickname_content"
            android:layout_width="177dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:text="@string/nickname_content"
            android:textAlignment="center"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="20sp"
            app:layout_constraintBottom_toTopOf="@+id/aboutme_box"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/nickname_box" />

        <TextView
            android:id="@+id/aboutme_box"
            android:layout_width="377dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="16dp"
            android:background="#008577"
            android:fontFamily="sans-serif-medium"
            android:text="@string/about_me"
            android:textAlignment="center"
            android:textColor="#F3F0F0"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.731" />

        <ScrollView
            android:id="@+id/scroll_aboutme"
            android:layout_width="374dp"
            android:layout_height="169dp"
            android:layout_marginTop="466dp"
            android:contentDescription="@string/scroll_aboutme"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_editor_absoluteX="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/aboutme_content"
                    android:layout_width="322dp"
                    android:layout_height="410dp"
                    android:layout_marginStart="30dp"
                    android:text="@string/aboutme_content"
                    android:textAlignment="gravity"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="16sp" />
            </LinearLayout>
        </ScrollView>


    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>